# r2-object_detection

./: .gitignore  AUTHORS  MANIFEST.in  PACKAGES  README.md  README.rst  arm_test.py  client.py  client_integration.py  client_test.py  custom_qr.py  depth_array.npy  edgedetection.py  inf_od_nwk.py  iris_camera_test.py  just_kinematics.py  kinematics.py  kmeans_pipeline.py  new-server.py  new_server.py  onjetson.py  piimages.py  piimages_final.py  piimagesr.py  publish_arm_updates.py  raw_arm_test.py  realsenseanalyze.py  requirements.txt  rps.py  run_kinematics.py  scheduler_test.py  server 2.py  server2.py  server_integration.py  setup.cfg  setup.py  streamvideo.py  tensor flow_test  test 2.py  test.py  (+1 more)
c1c0_object_detection/: __init__.py  inf_od_nwk.py  just_kinematics.py  kmeans.py
constraints/: constraints.py  kinematics.py
networking/: Client.py  Network.py  ObjectDetection.py  SensorState.py  Server.py  client_test.py  server_test.py
old_files/: new-server.py  piimages.py  piimagesr.py  realsenseanalyze.py  rps.py  server.py  showingtest.py  t.py  test.py
point_clouds_examples/: ply1.ply  ply2.ply  ply3.ply  ply4.ply
r2_object_detection/: View_point_cloud.py  __init__.py  cam_grasp_integration.py  camera.py  coordinate_transformation.py  export_ply.py  full_integration_final.py  grasp_detection.py  inference.py  kmeans.py  kmeans_async.py  projections.py  utitlity_constants.py
scripts/: inf_od_nwk.py
src/: .camera.py.swp  .get_depth_frame.py.swp  .kmeans.py.swp  __init__.py  camera.py  full_integration_final.py  get_bounds.py  get_depth_frame.py  (+6 more)
(+257 files in other folders)
