[metadata]
name = r2_object_detection
author = Cornell CUP Robitics
summary = C1C0's object inference and edge detection module.
description-file = README.md
description-content-type = text/x-markdown;charset=UTF-8
home-page = https://cornellcuprobotics.com/
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Software Development :: Libraries :: Python Modules
[files]
packages =
    r2_object_detection
